<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_diceroll"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_diceroll" />
    <item
        android:id="@+id/navigation_quickrules"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_quickrules" />
    <item
        android:id="@+id/navigation_charactersheets"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_charactersheets" />
    <item
        android:id="@+id/navigation_soundmanager"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_soundmanager" />
    <item
        android:id="@+id/navigation_generators"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_generators" />
    <!-- NOTE: having more than 5 crashes the layout for bottom nav bar
    <item-->
        <!--android:id="@+id/navigation_chat"-->
        <!--android:icon="@drawable/ic_home_black_24dp"-->
        <!--android:title="@string/title_chat" />-->

</menu>
