<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="jdr.projet.myapplication.Fragments.SoundManagerFragment">

    <Button
        android:id="@+id/buttonF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forward"
        android:layout_alignTop="@+id/buttonPause"
        android:layout_toStartOf="@+id/buttonPause"
        android:layout_toLeftOf="@+id/buttonPause"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause"
        android:id="@+id/buttonPause"
        android:layout_alignTop="@+id/buttonStop"
        android:layout_toLeftOf="@+id/buttonStop"
        android:layout_toStartOf="@+id/buttonStop" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Stop"
        android:id="@+id/buttonStop"
        android:layout_centerInParent="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:id="@+id/buttonPlay"
        android:layout_alignTop="@+id/buttonStop"
        android:layout_toRightOf="@+id/buttonStop"
        android:layout_toEndOf="@+id/buttonStop" />

    <Button
        android:id="@+id/buttonR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonPlay"
        android:layout_toEndOf="@+id/buttonPlay"
        android:layout_toRightOf="@+id/buttonPlay"
        android:text="@string/rewind" />
</RelativeLayout>